[workspace]
resolver = "2"
members = [
    "common",
    "file-rust",
    "http-rust",
    "embedded-replica-rust",
]

[workspace.dependencies]
color-eyre = "0.6.2"
libsql = { version = "0.1", git = "https://github.com/libsql/libsql"}
tokio = { version = "1.32.0", features = ["rt-multi-thread"] }

[patch.crates-io]
tonic = { git = "https://github.com/hyperium/tonic" }
tonic-web = { git = "https://github.com/hyperium/tonic" }
tower-http = { git = "https://github.com/tower-rs/tower-http", branch = "lucio/grpc-defaults" }
